--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta name="google-site-verification" content="vntXydAv57VxvLiAhz7KeRxuW9skemiNPTrBKXOE71A" />
+  <title>WhaleTrucker Reef</title>
+</head>
+<body>
+  <h1>Welcome to WhaleTrucker Reef</h1>
+</body>
+</html>
 
